--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.63",
+    "@clerk/nextjs": "^6.32.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
