--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@clerk/elements": "^0.23.63",
     "@clerk/nextjs": "^6.32.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.17.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -18,6 +19,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -26,12 +28,14 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-cloudinary": "^6.16.0",
+    "prisma": "^6.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -39,6 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
