--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -28,10 +29,13 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.6",
     "prisma": "^6.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "sonner": "^2.0.7",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.11",
@@ -42,6 +46,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stripe": "^8.0.417",
+    "@types/stripe-v3": "^3.1.33",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
